# EASY-EAI-Toolkit-C-Demo

algorithm-ocr/: test-ocr.cpp
real-time-ocr/: CMakeLists.txt  build.sh  real-time-ocr.cpp
real_time_ocr/: CMakeLists.txt  real-time-ocr.cpp
